--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,72 +1,37 @@
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing,
-# software distributed under the License is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  See the License for the
-# specific language governing permissions and limitations
-# under the License.
-#
+version: '3.8'
 
-# Basic Airflow cluster configuration for CeleryExecutor with Redis and PostgreSQL.
-# --- Includes MLflow Server ---
-#
-# WARNING: This configuration is for local development/testing. Do not use it in a production deployment without review.
-# [...] (Keep existing comments about variables)
----
 x-airflow-common:
   &airflow-common
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.9.2-python3.9}
   environment:
     &airflow-common-env
-    # --- ADDED: Prevent Python from writing .pyc files ---
     PYTHONDONTWRITEBYTECODE: "1"
-
-    # --- Airflow Core Settings ---
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     AIRFLOW__CORE__FERNET_KEY: ''
-    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true' # Default, specific DAGs can override
+    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
-
-    # --- BASE Python Dependencies (Scheduler, Webserver, Triggerer, Worker Base) ---
-    # Lean list: Core providers, clients needed by most components
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-apache-airflow-providers-postgres apache-airflow-providers-redis apache-airflow-providers-celery psycopg2-binary redis celery>=5.2.0 beautifulsoup4 PyPDF2 pinecone python-dotenv mlflow google-cloud-storage dvc[gs] requests==2.31.0 gunicorn}
-
-    # --- Environment Variables Passed to Tasks (from Host or .env file) ---
-    # These are loaded via .env mount and load_dotenv() in scripts OR inherited by tasks
     OPENAI_API_KEY: ${OPENAI_API_KEY}
     LANGSMITH_API_KEY: ${LANGSMITH_API_KEY}
     LANGSMITH_PROJECT: ${LANGSMITH_PROJECT}
     LANGSMITH_TRACING: ${LANGSMITH_TRACING}
     PINECONE_API_KEY: ${PINECONE_API_KEY}
     PINECONE_INDEX_NAME: ${PINECONE_INDEX_NAME}
-    PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT} # Keep if pinecone client needs it
+    PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT}
     HEVY_API_KEY: ${HEVY_API_KEY}
-    MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI:-http://mlflow-server:5000} # For tasks to log to mlflow-server container
-    MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts} # For tasks & mlflow server
-
+    MLFLOW_TRACKING_URI: ${MLFLOW_TRACKING_URI:-http://mlflow-server:5000}
+    MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts}
   volumes:
-    - ${AIRFLOW_PROJ_DIR:-.}:/opt/airflow/app # Mount project code
+    - ${AIRFLOW_PROJ_DIR:-.}:/opt/airflow/app
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/app/.env # Mount .env file inside app dir
-
-  # user: "${AIRFLOW_UID:-50000}:0" # Keep commented out unless needed
-
+    - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/app/.env
   depends_on:
     &airflow-common-depends-on
     redis:
@@ -102,38 +67,35 @@ services:
       start_period: 30s
     restart: always
 
-  # --- MLFLOW SERVER SERVICE (with pip install fix) ---
   mlflow-server:
-    image: python:3.9-slim # Using slim image
+    image: python:3.9-slim
     container_name: personaltrainerai-mlflow-server-1
     environment:
-      # Uses same DB as Airflow, but separate tables within 'airflow' DB
       MLFLOW_BACKEND_STORE_URI: postgresql+psycopg2://airflow:airflow@postgres/airflow
       MLFLOW_ARTIFACT_ROOT: ${MLFLOW_ARTIFACT_ROOT:-gs://ragllm-454718-mlflow-artifacts}
-      # Pass GCS credentials implicitly via VM service account
-    volumes: [] # No host volumes needed for this simple setup
+    volumes: []
     command: >
-      bash -c "echo 'Ensuring pip is installed...' &&
-               python3 -m ensurepip --upgrade && # <<< FIX: Install/upgrade pip
-               echo 'Installing MLflow dependencies...' &&
-               pip install --no-cache-dir mlflow psycopg2-binary google-cloud-storage && # Install necessary packages
-               echo 'Starting MLflow server...' &&
-               mlflow server \
-                --host 0.0.0.0 \
-                --port 5000 \
-                --backend-store-uri $$MLFLOW_BACKEND_STORE_URI \
-                --default-artifact-root $$MLFLOW_ARTIFACT_ROOT"
+      sh -c "echo 'Ensuring pip is installed...' && \
+             python3 -m ensurepip --upgrade && \
+             echo 'Installing MLflow dependencies...' && \
+             pip install --no-cache-dir mlflow psycopg2-binary google-cloud-storage && \
+             echo 'Running MLflow DB migration...' && \
+             mlflow db upgrade $MLFLOW_BACKEND_STORE_URI && \
+             echo 'Starting MLflow server...' && \
+             mlflow server \
+              --host 0.0.0.0 \
+              --port 5000 \
+              --backend-store-uri $MLFLOW_BACKEND_STORE_URI \
+              --default-artifact-root $MLFLOW_ARTIFACT_ROOT"
     ports:
-      - "5001:5000" # Expose MLflow UI on host port 5001
+      - "5001:5000"
     restart: always
     depends_on:
       postgres:
-        condition: service_healthy # Ensure DB is ready before MLflow starts
-  # --- END MLFLOW SERVER SERVICE ---
+        condition: service_healthy
 
   airflow-webserver:
     <<: *airflow-common
-    # Uses BASE dependencies defined in x-airflow-common
     command: webserver
     ports:
       - "8080:8080"
@@ -148,15 +110,14 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
-      mlflow-server: # Wait for mlflow server to be started
-         condition: service_started
+      mlflow-server:
+        condition: service_started
 
   airflow-scheduler:
     <<: *airflow-common
-    # Uses BASE dependencies defined in x-airflow-common
     command: scheduler
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8973/health"] # Airflow 2.9+ scheduler health port
+      test: ["CMD", "curl", "--fail", "http://localhost:8973/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -167,7 +128,7 @@ services:
       airflow-init:
         condition: service_completed_successfully
       mlflow-server:
-         condition: service_started
+        condition: service_started
 
   airflow-worker:
     <<: *airflow-common
@@ -177,12 +138,10 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 30s # Give worker time to install potentially heavy deps
+      start_period: 30s
     environment:
-      <<: *airflow-common-env # Inherit BASE env vars (DB, Redis, Core, etc.)
-      DUMB_INIT_SETSID: "0" # Specific worker setting
-      # --- OVERRIDE: Add worker-specific heavy requirements ---
-      # Concatenates BASE list (from common env) with WORKER-SPECIFIC list
+      <<: *airflow-common-env
+      DUMB_INIT_SETSID: "0"
       _PIP_ADDITIONAL_REQUIREMENTS: "${_PIP_ADDITIONAL_REQUIREMENTS:-apache-airflow-providers-postgres apache-airflow-providers-redis apache-airflow-providers-celery psycopg2-binary redis celery>=5.2.0 beautifulsoup4 PyPDF2 pinecone python-dotenv mlflow google-cloud-storage dvc[gs] requests==2.31.0 gunicorn} langchain langchain-openai langchain_community langchain_huggingface openai ragas deepseek langsmith scikit-learn numpy pandas tqdm matplotlib sentence-transformers torch transformers datasets"
     restart: always
     depends_on:
@@ -190,11 +149,10 @@ services:
       airflow-init:
         condition: service_completed_successfully
       mlflow-server:
-         condition: service_started
+        condition: service_started
 
   airflow-triggerer:
     <<: *airflow-common
-    # Uses BASE dependencies defined in x-airflow-common
     command: triggerer
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
@@ -208,45 +166,26 @@ services:
       airflow-init:
         condition: service_completed_successfully
       mlflow-server:
-         condition: service_started
+        condition: service_started
 
-  # --- AIRFLOW INIT SERVICE ---
-  # Runs once to init/migrate DB and check setup
   airflow-init:
     <<: *airflow-common
     entrypoint: /bin/bash
     command:
       - -c
       - |
-        set -e # Exit immediately if a command exits with a non-zero status.
-        # Check resources (keep existing checks)
-        # ...
-
-        # Check .env permissions only if AIRFLOW_UID is set (for non-root execution)
+        set -e
         if [[ -n "${AIRFLOW_UID}" && "${AIRFLOW_UID}" != "0" ]]; then
-          # Add check for .env file readability by AIRFLOW_UID if needed
           echo "Checking .env file permissions (if AIRFLOW_UID is set)..."
-          # Example check: test -r /sources/.env || { echo "ERROR: .env file not readable by AIRFLOW_UID=${AIRFLOW_UID}"; exit 1; }
         fi
-
-        # Ensure directories exist where volumes are mounted on host check path (/sources)
         mkdir -p /sources/logs /sources/dags /sources/plugins
-        echo "Attempting to make /sources/logs writable by all..."
         chmod -R 777 /sources/logs || echo "WARN: Failed to chmod /sources/logs"
-
-        # Correct permissions on host mounts IF AIRFLOW_UID is set and non-root
         if [[ -n "${AIRFLOW_UID}" && "${AIRFLOW_UID}" != "0" ]]; then
-          echo "Changing ownership of /sources/* to ${AIRFLOW_UID}:0..."
-          # Be careful with chown on the root of the mount if project has many files
           chown -R "${AIRFLOW_UID}:0" /sources/logs /sources/dags /sources/plugins || echo "WARN: Failed to chown basic dirs in /sources"
         else
-           echo "Running as root or AIRFLOW_UID not set, skipping chown."
+          echo "Running as root or AIRFLOW_UID not set, skipping chown."
         fi
-
-        # Ensure standard Airflow directories exist inside the final container path
         mkdir -p /opt/airflow/logs /opt/airflow/dags /opt/airflow/plugins
-
-        # Check DB Migrations and User Creation
         echo "Running Airflow DB migrate..."
         airflow db migrate
         echo "Creating Airflow Admin User..."
@@ -258,40 +197,34 @@ services:
             --role "${_AIRFLOW_WWW_USER_ROLE:-Admin}" \
             --email "${_AIRFLOW_WWW_USER_EMAIL:-admin@example.com}" || \
         echo "Admin user already exists or failed to create."
-
         echo "Airflow initialization checks complete."
-        # Note: Removed 'exec /entrypoint airflow version' as migrate/users create are sufficient checks
     environment:
       <<: *airflow-common-env
-      # Override _PIP_ADDITIONAL_REQUIREMENTS for init - only needs core airflow+db driver
       _PIP_ADDITIONAL_REQUIREMENTS: 'psycopg2-binary'
-      _AIRFLOW_DB_MIGRATE: 'false' # Set to false, we run migrate explicitly
-      _AIRFLOW_WWW_USER_CREATE: 'false' # Set to false, we run users create explicitly
-      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-Vinyas} # Use your desired admin user
-      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-Vinyas} # Use your desired admin pass
+      _AIRFLOW_DB_MIGRATE: 'false'
+      _AIRFLOW_WWW_USER_CREATE: 'false'
+      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-Vinyas}
+      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-Vinyas}
       _AIRFLOW_WWW_USER_FIRSTNAME: ${_AIRFLOW_WWW_USER_FIRSTNAME:-Vinyas}
       _AIRFLOW_WWW_USER_LASTNAME: ${_AIRFLOW_WWW_USER_LASTNAME:-N}
       _AIRFLOW_WWW_USER_ROLE: ${_AIRFLOW_WWW_USER_ROLE:-Admin}
       _AIRFLOW_WWW_USER_EMAIL: ${_AIRFLOW_WWW_USER_EMAIL:-vinyas@example.com}
-    user: "0:0" # Run init as root to perform setup actions
+    user: "0:0"
     volumes:
-      # Mount project dir to /sources for init checks
       - ${AIRFLOW_PROJ_DIR:-.}:/sources
-  # --- END AIRFLOW INIT SERVICE ---
 
   airflow-cli:
     <<: *airflow-common
     profiles:
       - debug
     environment:
-      <<: *airflow-common-env # Uses BASE dependencies
+      <<: *airflow-common-env
       CONNECTION_CHECK_MAX_COUNT: "0"
-    command: ["bash"] # Keep container running for exec
-    tty: true # Allocate pseudo-TTY
+    command: ["bash"]
+    tty: true
 
   flower:
     <<: *airflow-common
-    # Uses BASE dependencies
     command: celery flower
     profiles:
       - flower
