--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -36,4 +36,4 @@ EXPOSE 8580
 # Define the command to run the Streamlit application
 # --server.address=0.0.0.0 makes it accessible outside the container
 # --server.port matches the EXPOSE instruction
-CMD ["streamlit", "run", "chat_client.py", "--server.port=$PORT", "--server.address=0.0.0.0"]
+CMD streamlit run chat_client.py --server.port=${PORT} --server.address=0.0.0.0
