--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
-name: Build and Deploy Backend & Frontend
+name: Test, Build, and Deploy Backend & Frontend
 
+# Trigger on push to the branch that initiates deployment
 on:
   push:
     branches:
-      - cloudrun-ci-cd # Or your deployment branch
+      - cloudrun-ci-cd # Deployment branch
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
@@ -12,11 +13,49 @@ env:
   REGION: ${{ secrets.CLOUD_RUN_REGION }}
 
 jobs:
-  # --- Backend Job ---
+  # --- CI Job: Run Tests ---
+  test:
+    name: Run Python Tests # Optional: Add a descriptive name
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.12] # Use the desired Python version
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          # Consider using caching for dependencies if installs are slow
+          pip install -r requirements.txt # Assuming requirements are at the root
+
+      - name: Write secrets to .env for testing
+        # Note: This uses GitHub secrets directly. Ensure tests expect this.
+        # This is DIFFERENT from how secrets are injected during deployment.
+        run: |
+          echo "pinecone_api_key=${{ secrets.pinecone_api_key }}" >> .env
+          echo "PINECONE_ENVIRONMENT=${{ secrets.PINECONE_ENVIRONMENT }}" >> .env
+          echo "PINECONE_INDEX_NAME=${{ secrets.PINECONE_INDEX_NAME }}" >> .env
+          echo "OPENAI_API_KEY=${{ secrets.GIT_OPENAI_API_KEY }}" >> .env
+          # The following line seems redundant as pinecone_api_key is already added above. Remove if needed.
+          # echo "PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}" >> .env
+
+      - name: Run tests
+        run: |
+          PYTHONPATH=. python -m pytest tests/  # Adjust path/command if needed
+
+  # --- CD Job: Backend ---
   build-and-deploy-backend:
     name: Build and Deploy Backend
     runs-on: ubuntu-latest
-
+    needs: test # <<< IMPORTANT: This job runs only if 'test' succeeds
     permissions:
       contents: 'read'
       id-token: 'write' # Required for Workload Identity Federation
@@ -36,7 +75,6 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: Login to Artifact Registry
-      # Use gcloud to configure docker auth using the WIF credentials.
       run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
 
     - name: Build and Push Backend Image
@@ -46,7 +84,6 @@ jobs:
           -t ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/backend:${{ github.sha }} \
           -f Dockerfile . \
           --push
-      # Note: Ensure 'Dockerfile' is the correct filename for your backend
 
     - name: Deploy Backend to Cloud Run
       id: deploy-backend
@@ -54,42 +91,23 @@ jobs:
       with:
         service: ${{ secrets.CLOUD_RUN_BACKEND_SERVICE_NAME }}
         region: ${{ env.REGION }}
-        # Deploy the specific backend image tagged with the commit SHA
         image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/backend:${{ github.sha }}
-        # --- Environment variables from Secret Manager ---
-        # Map environment variables inside Cloud Run (left side)
-        # to the GCP Secret Manager secrets (right side, using GitHub secrets holding the secret name:version)
+        # --- UNCOMMENT AND CONFIGURE SECRETS FOR DEPLOYMENT ---
         # secrets: |
-        #   CLOUD_SQL_CONNECTION_NAME=${{ secrets.CLOUD_SQL_CONNECTION_NAME }}
-        #   GOOGLE_CLOUD_PROJECT=${{ secrets.GOOGLE_CLOUD_PROJECT }}
-        #   HEVY_API_KEY=${{ secrets.GCP_HEVY_API_KEY }}
-        #   LANGSMITH_API=${{ secrets.LANGSMITH_API }}
-        #   LANGSMITH_PROJECT=${{ secrets.LANGSMITH_PROJECT }}
-        #   LANGSMITH_TRACING=${{ secrets.LANGSMITH_TRACING }}
-        #   OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
-        #   PINECONE_API_KEY=${{ secrets.GCP_PINECONE_API_KEY }}
-        #   POSTGRES_DB=${{ secrets.POSTGRES_DB }}
-        #   POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}
-        #   POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-        #   POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}
-        #   POSTGRES_USER=${{ secrets.POSTGRES_USER }}
-        #   REDIS_DB=${{ secrets.REDIS_DB }}
-        #   REDIS_HOST=${{ secrets.REDIS_HOST }}
-        #   REDIS_PORT=${{ secrets.REDIS_PORT }}
-        #   SQL_ALCHEMY_URL=${{ secrets.SQL_ALCHEMY_URL }}
-          
+        #   GROQ_API=sm://${{ secrets.GROQ_API_SECRET_NAME }} # Example from previous discussion
+        #   # Add other env vars mapped to Secret Manager secrets (sm:// prefix)
+        #   POSTGRES_PASSWORD=sm://${{ secrets.POSTGRES_PASSWORD_SECRET_NAME }}
+        #   # etc...
 
-      # Note: Cloud SQL connections and other variables set via UI *not* listed in 'secrets' above
-      # will be preserved by default.
-
-
-
-  # --- Frontend Job ---
+  # --- CD Job: Frontend ---
   build-and-deploy-frontend:
     name: Build and Deploy Frontend
     runs-on: ubuntu-latest
-    # Optional: Make frontend deployment depend on backend success
-    # needs: build-and-deploy-backend
+    # Option 1: Run in parallel with backend (if independent)
+    needs: test # <<< IMPORTANT: This job runs only if 'test' succeeds
+
+    # Option 2: Run *after* backend deployment (if frontend depends on backend)
+    # needs: build-and-deploy-backend # <<< Uncomment this and comment the line above if needed
 
     permissions:
       contents: 'read'
@@ -119,7 +137,6 @@ jobs:
           -t ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/frontend:${{ github.sha }} \
           -f Dockerfile.frontend . \
           --push
-      # Note: Ensure 'Dockerfile.frontend' is the correct filename for your frontend
 
     - name: Deploy Frontend to Cloud Run
       id: deploy-frontend
@@ -127,9 +144,7 @@ jobs:
       with:
         service: ${{ secrets.CLOUD_RUN_FRONTEND_SERVICE_NAME }}
         region: ${{ env.REGION }}
-        # Deploy the specific frontend image tagged with the commit SHA
         image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/frontend:${{ github.sha }}
-        # No 'secrets:' block needed here if frontend doesn't require GCP Secret Manager variables
+        # --- Add frontend secrets if needed, likely mapping to Secret Manager ---
         # secrets: |
-        #   BACKEND_API=${{ secrets.BACKEND_API }}
-
+        #   BACKEND_API_URL=sm://${{ secrets.BACKEND_API_URL_SECRET_NAME }} # Example
