--- a/.github/workflows/data_pipeline_to_gcp.yml
+++ b/.github/workflows/data_pipeline_to_gcp.yml
@@ -11,9 +11,31 @@ jobs:
   upload-to-gcs:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: [3.12]
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Write secrets to .env
+        run: |
+          echo "pinecone_api_key=${{ secrets.pinecone_api_key }}" >> .env
+
+      - name: Run Data Pipeline tests
+        run: |
+          PYTHONPATH=. python -m pytest tests/test_ms.py tests/test_ms_preprocess.py tests/test_other_preprocessing.py tests/test_vectdb.py tests/test_pdf_scraper.py
 
       - name: Authenticate with GCP
         uses: google-github-actions/auth@v1
