--- a/.github/workflows/evaluate-model.yml
+++ b/.github/workflows/evaluate-model.yml
@@ -1,5 +1,9 @@
 name: Evaluate Model Quality
 
+permissions:
+  id-token: write
+  contents: read
+
 # runs daily at 07:00 UTC, and you can also trigger manually
 on:
   schedule:
@@ -8,7 +12,9 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
+  GCS_BUCKET:  ${{ secrets.GCS_BUCKET }}
+  GAR_LOCATION: ${{ secrets.CLOUD_RUN_REGION }}
+  REGION: ${{ secrets.CLOUD_RUN_REGION }}
 
 jobs:
   evaluate-and-upload:
@@ -28,6 +34,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+          # Write secrets to .env file
+      - name: Write secrets to .env for evaluation
+        run: |
+          echo "LANGSMITH_API=${{ secrets.LANGSMITH_API_KEY }}" >> .env
+          echo "LANGSMITH_TRACING=${{ secrets.LANGSMITH_TRACING }}" >> .env
+          echo "LANGSMITH_PROJECT=${{ secrets.LANGSMITH_PROJECT }}" >> .env
+          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
 
       # Authenticate to GCP (via Workload Identity)
       - name: Google Auth
