--- a/requirements.txt
+++ b/requirements.txt
@@ -131,6 +131,7 @@ packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
+passlib==1.7.4
 pexpect==4.9.0
 pillow==11.1.0
 pinecone==6.0.1
@@ -218,5 +219,3 @@ wrapt==1.17.2
 yarl==1.18.3
 zipp==3.21.0
 zstandard==0.23.0
-PyPDF2==3.0.1
-pytest==7.4.2
