--- a/.github/workflows/evaluate-model.yml
+++ b/.github/workflows/evaluate-model.yml
@@ -30,6 +30,17 @@ jobs:
         with:
           python-version: 3.12
 
+      - name: Fetch secrets from Secret Manager
+        run: |
+          echo LANGSMITH_API_KEY=$(gcloud secrets versions access latest --secret="LANGSMITH_API_KEY") >> $GITHUB_ENV
+          echo LANGSMITH_TRACING=$(gcloud secrets versions access latest --secret="LANGSMITH_TRACING") >> $GITHUB_ENV
+          echo LANGSMITH_PROJECT=$(gcloud secrets versions access latest --secret="LANGSMITH_PROJECT") >> $GITHUB_ENV
+          
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -38,9 +49,6 @@ jobs:
           # Write secrets to .env file
       - name: Write secrets to .env for evaluation
         run: |
-          echo "LANGSMITH_API=${{ secrets.LANGSMITH_API_KEY }}" >> .env
-          echo "LANGSMITH_TRACING=${{ secrets.LANGSMITH_TRACING }}" >> .env
-          echo "LANGSMITH_PROJECT=${{ secrets.LANGSMITH_PROJECT }}" >> .env
           echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
           echo "DEEPSEEK_API_KEY=${{ secrets.DEEPSEEK_API_KEY }}" >> .env
 
@@ -61,12 +69,6 @@ jobs:
         run: |
           # run your eval.py and capture its JSON output
           python src/chatbot/agent_eval/eval.py > eval_output.json
-
-      - name: Debug GCS access
-        run: |
-          gcloud auth list
-          gcloud config list project
-          gsutil ls "gs://${{ env.GCS_BUCKET }}/model_metrics/" || echo "👀 bucket listing failed"
 
       - name: Upload metrics to GCS
         run: |
