--- a/.github/workflows/evaluate-model.yml
+++ b/.github/workflows/evaluate-model.yml
@@ -7,7 +7,7 @@ permissions:
 # runs daily at 07:00 UTC, and you can also trigger manually
 on:
   schedule:
-    - cron: '0 7 * * *'
+    - cron: '0 7 */14 * *'
   workflow_dispatch:
 
 env:
@@ -30,17 +30,6 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: Fetch secrets from Secret Manager
-        run: |
-          echo LANGSMITH_API_KEY=$(gcloud secrets versions access latest --secret="LANGSMITH_API_KEY") >> $GITHUB_ENV
-          echo LANGSMITH_TRACING=$(gcloud secrets versions access latest --secret="LANGSMITH_TRACING") >> $GITHUB_ENV
-          echo LANGSMITH_PROJECT=$(gcloud secrets versions access latest --secret="LANGSMITH_PROJECT") >> $GITHUB_ENV
-          
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.12
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -51,6 +40,9 @@ jobs:
         run: |
           echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
           echo "DEEPSEEK_API_KEY=${{ secrets.DEEPSEEK_API_KEY }}" >> .env
+          echo "LANGSMITH_API=${{ secrets.LANGSMITH_API }}" >> .env
+          echo "LANGSMITH_TRACING=${{ secrets.LANGSMITH_TRACING }}" >> .env
+          echo "LANGSMITH_PROJECT=${{ secrets.LANGSMITH_PROJECT }}" >> .env
 
       # Authenticate to GCP (via Workload Identity)
       - name: Google Auth
