--- a/.github/workflows/evaluate-model.yml
+++ b/.github/workflows/evaluate-model.yml
@@ -4,7 +4,7 @@ permissions:
   id-token: write
   contents: read
 
-# runs daily at 07:00 UTC, and you can also trigger manually
+# runs bi-weekly at 07:00 UTC
 on:
   schedule:
     - cron: '0 7 */14 * *'
