--- a/.github/workflows/evaluate-model.yml
+++ b/.github/workflows/evaluate-model.yml
@@ -4,7 +4,7 @@ permissions:
   id-token: write
   contents: read
 
-# runs bi-weekly at 07:00 UTC
+# runs bi‑weekly at 07:00 UTC
 on:
   schedule:
     - cron: '0 7 */14 * *'
@@ -32,10 +32,10 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt-get update && sudo apt-get install -y jq
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-          # Write secrets to .env file
       - name: Write secrets to .env for evaluation
         run: |
           echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
@@ -44,7 +44,6 @@ jobs:
           echo "LANGSMITH_TRACING=${{ secrets.LANGSMITH_TRACING }}" >> .env
           echo "LANGSMITH_PROJECT=${{ secrets.LANGSMITH_PROJECT }}" >> .env
 
-      # Authenticate to GCP (via Workload Identity)
       - name: Google Auth
         uses: google-github-actions/auth@v2
         with:
@@ -59,14 +58,61 @@ jobs:
       - name: Run evaluation script
         id: eval
         run: |
-          # run your eval.py and capture its JSON output
           python src/chatbot/agent_eval/eval.py > eval_output.json
+          accuracy=$(jq '.accuracy | tonumber' eval_output.json)
+          echo "Model accuracy: $accuracy"
+          echo "accuracy=$accuracy" >> $GITHUB_OUTPUT
 
       - name: Upload metrics to GCS
         run: |
           TS=$(date -u +"%Y%m%dT%H%M%SZ")
           gsutil cp eval_output.json "gs://${{ env.GCS_BUCKET }}/model_metrics/eval_${TS}.json"
 
-      - name: Verify upload
+      - name: Notify via SMTP if accuracy is below 90%
+        if: ${{ steps.eval.outputs.accuracy < 0.9 }}
+        env:
+          EMAIL_SENDER:   ${{ secrets.EMAIL_SENDER }}
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+          EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
         run: |
-          gsutil ls "gs://${{ env.GCS_BUCKET }}/model_metrics/"
+          python - <<EOF
+import os, json
+import smtplib
+from email.mime.text import MIMEText
+from email.mime.multipart import MIMEMultipart
+
+# Load credentials & eval result
+sender   = os.environ["EMAIL_SENDER"]
+password = os.environ["EMAIL_PASSWORD"]
+receiver = os.environ["EMAIL_RECEIVER"]
+
+with open("eval_output.json") as f:
+    data = json.load(f)
+accuracy = data.get("accuracy", 0)
+
+# Build email
+subject = "🚨 Model Accuracy Alert"
+body = f"""\
+Hi Team,
+
+The latest evaluation shows accuracy dropped below 90%.
+
+Current Accuracy: {accuracy:.2%}
+
+Please investigate and retrain or adjust thresholds as needed.
+
+Regards,
+GitHub Actions Bot
+"""
+
+msg = MIMEMultipart()
+msg["From"]    = sender
+msg["To"]      = receiver
+msg["Subject"] = subject
+msg.attach(MIMEText(body, "plain"))
+
+# Send via Gmail SMTP
+with smtplib.SMTP_SSL("smtp.gmail.com", 465) as server:
+    server.login(sender, password)
+    server.send_message(msg)
+EOF
